tests/algorithms/x/PHP/sorts/exchange_sort.out
Fatal error: Uncaught Error: exchange_sort(): Argument #1 ($numbers) could not be passed by reference in /workspace/mochi/tests/algorithms/x/PHP/sorts/exchange_sort.php:71
Stack trace:
#0 {main}
  thrown in /workspace/mochi/tests/algorithms/x/PHP/sorts/exchange_sort.php on line 71