tests/algorithms/x/PHP/sorts/exchange_sort.php
<?php
ini_set('memory_limit', '-1');
function _str($x) {
    if (is_array($x)) {
        $isList = array_keys($x) === range(0, count($x) - 1);
        if ($isList) {
            $parts = [];
            foreach ($x as $v) { $parts[] = _str($v); }
            return '[' . implode(' ', $parts) . ']';
        }
        $parts = [];
        foreach ($x as $k => $v) { $parts[] = _str($k) . ':' . _str($v); }
        return 'map[' . implode(' ', $parts) . ']';
    }
    if (is_bool($x)) return $x ? 'true' : 'false';
    if ($x === null) return 'null';
    return strval($x);
}
function _iadd($a, $b) {
    if (function_exists('bcadd')) {
        $sa = is_int($a) ? strval($a) : (is_string($a) ? $a : sprintf('%.0f', $a));
        $sb = is_int($b) ? strval($b) : (is_string($b) ? $b : sprintf('%.0f', $b));
        return bcadd($sa, $sb, 0);
    }
    return $a + $b;
}
function _isub($a, $b) {
    if (function_exists('bcsub')) {
        $sa = is_int($a) ? strval($a) : (is_string($a) ? $a : sprintf('%.0f', $a));
        $sb = is_int($b) ? strval($b) : (is_string($b) ? $b : sprintf('%.0f', $b));
        return bcsub($sa, $sb, 0);
    }
    return $a - $b;
}
function _imul($a, $b) {
    if (function_exists('bcmul')) {
        $sa = is_int($a) ? strval($a) : (is_string($a) ? $a : sprintf('%.0f', $a));
        $sb = is_int($b) ? strval($b) : (is_string($b) ? $b : sprintf('%.0f', $b));
        return bcmul($sa, $sb, 0);
    }
    return $a * $b;
}
function _idiv($a, $b) {
    return _intdiv($a, $b);
}
function _imod($a, $b) {
    if (function_exists('bcmod')) {
        $sa = is_int($a) ? strval($a) : (is_string($a) ? $a : sprintf('%.0f', $a));
        $sb = is_int($b) ? strval($b) : (is_string($b) ? $b : sprintf('%.0f', $b));
        return intval(bcmod($sa, $sb));
    }
    return $a % $b;
}
function exchange_sort($numbers) {
  $n = count($numbers);
  $i = 0;
  while ($i < $n) {
  $j = _iadd($i, 1);
  while ($j < $n) {
  if ($numbers[$j] < $numbers[$i]) {
  $temp = $numbers[$i];
  $numbers[$i] = $numbers[$j];
  $numbers[$j] = $temp;
}
  $j = _iadd($j, 1);
};
  $i = _iadd($i, 1);
};
  return $numbers;
}
echo rtrim(_str(exchange_sort([5, 4, 3, 2, 1]))), PHP_EOL;
echo rtrim(_str(exchange_sort([-1, -2, -3]))), PHP_EOL;
echo rtrim(_str(exchange_sort([1, 2, 3, 4, 5]))), PHP_EOL;
echo rtrim(_str(exchange_sort([0, 10, -2, 5, 3]))), PHP_EOL;
echo rtrim(_str(exchange_sort([]))), PHP_EOL;
